--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ repositories {
 def dbflow_version = "4.0.3"
 
 dependencies {
+    compile 'org.parceler:parceler-api:1.1.6'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
     compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.codepath.libraries:android-oauth-handler:1.2.5'
     compile 'com.android.support:appcompat-v7:25.3.1'
