--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,11 +56,14 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
     compile 'com.android.support:recyclerview-v7:25.3.1'
 
-    compile "com.android.support:support-vector-drawable:${supportLibVersion}" // VectorDrawableCompat
-    compile "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
+    compile "com.android.support:support-vector-drawable:${supportLibVersion}"
+    // VectorDrawableCompat
+    compile "com.android.support:animated-vector-drawable:${supportLibVersion}"
+    // AnimatedVectorDrawableCompat
 
     compile "com.android.support:transition:${supportLibVersion}"
 
     compile "com.android.support:support-annotations:${supportLibVersion}"
 }
+
 
