Enabled endless scrolling for usertime line.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         </activity>
         <activity android:name=".TimelineActivity" />
         <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".UsersProfileActivity"></activity>
     </application>
 
 </manifest>
